# advent_of_code_2025

./: .gitignore  Cargo.toml  README.md  problem1.ipynb  problem2.ipynb  problem3.ipynb  problem4.ipynb  problem5.ipynb  problem6.ipynb  problem7.ipynb  problem8.ipynb  problem9.ipynb  problern10.ipynb  problern11.ipynb  problern12.ipynb  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
