[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent_of_code_2025"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
reqwest = { version = "0.11.22", features = ["blocking"]}
soup = "0.5.1"
regex = "1.10.2"
rayon = "1.8.0"
rand = "0.8.5"